--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <div class="right">
             <div id="nav">
+                <img src="imgs/logo_ta.png" />
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="works.html">WORKS</a>
