--- a/static/right.html
+++ b/static/right.html
@@ -1,9 +1,9 @@
 <div class="right">
     <div id="nav">
         <img src="imgs/logo_ta.png" />
-        <a href="index.html">HOME</a>
-        <a href="about.html">ABOUT</a>
-        <a href="works.html">WORKS</a>
-        <a href="contact.html">CONTACT</a>
+        <a href="index.php">HOME</a>
+        <a href="about.php">ABOUT</a>
+        <a href="works.php">WORKS</a>
+        <a href="contact.php">CONTACT</a>
     </div>
 </div>
