--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <script src="js/font.js"></script>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@TeamTast" />
-    <meta property="og:url" content="https://tast.jp/about.php" />
+    <meta property="og:url" content="https://tast.jp/about.html" />
     <meta property="og:title" content="Tast | About" /> 
     <meta property="og:description" content="身内で結成されたチームです。" /> 
     <meta property="og:image" content="https://tast.jp/imgs/logo_ta.png" />
@@ -40,7 +40,15 @@
             </div>
             <p id="copyright">© 2022 Tast</p>
         </div>
-        <?php include('static/right.html'); ?>
+        <div class="right">
+            <div id="nav">
+                <img src="imgs/logo_ta.png" />
+                <a href="index.html">HOME</a>
+                <a href="about.html">ABOUT</a>
+                <a href="works.html">WORKS</a>
+                <a href="contact.html">CONTACT</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
