--- a/index.html
+++ b/index.html
@@ -3,26 +3,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WORKS | Tast</title>
+    <title>HOME | Tast</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/works.css">
     <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon">
     <script src="js/font.js"></script>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@TeamTast" />
-    <meta property="og:url" content="https://tast.jp/works.php" />
-    <meta property="og:title" content="Tast | Works" /> 
+    <meta property="og:url" content="https://tast.jp" />
+    <meta property="og:title" content="Tast | タスト" /> 
     <meta property="og:description" content="身内で結成されたチームです。" /> 
     <meta property="og:image" content="https://tast.jp/imgs/logo_ta.png" />
 </head>
 <body>
     <div class="flexer">
         <div class="left">
-            <p class="title">WORKS</p>
-            <p class="notfound">Not Found...</p>
+            <img src="imgs/logo.webp" />
             <p id="copyright">© 2022 Tast</p>
         </div>
-        <?php include('static/right.html'); ?>
+        <div class="right">
+            <div id="nav">
+                <img src="imgs/logo_ta.png" />
+                <a href="index.html">HOME</a>
+                <a href="about.html">ABOUT</a>
+                <a href="works.html">WORKS</a>
+                <a href="contact.html">CONTACT</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
