--- a/static/right.html
+++ b/static/right.html
@@ -1,10 +1,10 @@
         <div class="right">
             <div id="nav">
                 <img src="imgs/logo_ta.png" />
-                <a href="index.php">HOME</a>
-                <a href="about.php">ABOUT</a>
-                <a href="works.php">WORKS</a>
-                <a href="contact.php">CONTACT</a>
+                <a href="index.html">HOME</a>
+                <a href="about.html">ABOUT</a>
+                <a href="works.html">WORKS</a>
+                <a href="contact.html">CONTACT</a>
             </div>
         </div>
 
