--- a/works.html
+++ b/works.html
@@ -3,39 +3,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME | Tast</title>
+    <title>WORKS | Tast</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/works.css">
     <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon">
     <script src="js/font.js"></script>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@TeamTast" />
-    <meta property="og:url" content="https://tast.jp" />
-    <meta property="og:title" content="Tast | タスト" /> 
+    <meta property="og:url" content="https://tast.jp/works.html" />
+    <meta property="og:title" content="Tast | Works" /> 
     <meta property="og:description" content="身内で結成されたチームです。" /> 
     <meta property="og:image" content="https://tast.jp/imgs/logo_ta.png" />
 </head>
 <body>
     <div class="flexer">
         <div class="left">
-            <img src="imgs/logo.webp" />
+            <p class="title">WORKS</p>
+            <p class="notfound">Not Found...</p>
             <p id="copyright">© 2022 Tast</p>
         </div>
-        <?php include('static/right.html'); ?>
+        <div class="right">
+            <div id="nav">
+                <img src="imgs/logo_ta.png" />
+                <a href="index.html">HOME</a>
+                <a href="about.html">ABOUT</a>
+                <a href="works.html">WORKS</a>
+                <a href="contact.html">CONTACT</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
-
-<!-- 
-
-    一緒に開発しよう。 
-    参加するには、contact.phpのURLパラメーター「join」にtrueを指定します。
-
--->
-
-<?php
-    session_start();
-    $jointrue = @$_SESSION["jointrue"];
-    if($jointrue === "pass"){
-        echo "<!-- じゃじゃーん、「join」にkkrmを指定してね -->";
-    }
-?>
