--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <div class="flexer">
         <div class="left">
             <p class="title">CONTACT</p>
-            <p class="form">Coming soon...</p>
+            <p class="form"><a href="mailto:contact@tast.jp">contact@tast.jp</a>へご連絡ください。</p>
             <p id="copyright">© 2022 Tast</p>
         </div>
         <div class="right">
