--- a/works.html
+++ b/works.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -6,14 +7,22 @@
     <title>WORKS | Tast</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/works.css">
+
+    <!--共通要素-->
     <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon">
     <script src="js/font.js"></script>
+    <meta name="description" content="TeamTast 公式ページ">
+    <meta name="keywords" content="Tast,TeamTast,たすと,タスト,クリエイターチーム">
+    <meta name="referrer" content="no-refereer">
+    <meta name="format-detection" content="telephone=no,address=no">
+    <meta name="google" content="notranslate">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@TeamTast" />
     <meta property="og:url" content="https://tast.jp/works.html" />
+
     <meta property="og:title" content="Tast | Works" /> 
-    <meta property="og:description" content="身内で結成されたチームです。" /> 
-    <meta property="og:image" content="https://tast.jp/imgs/logo_ta.png" />
+    <meta property="og:description" content="Tastで作られた創作物をご覧いただけます。" /> 
+    <meta property="og:image" content="https://tast.jp/imgs/logo_ta.webp" />
 </head>
 <body>
     <div class="flexer">
@@ -24,7 +33,7 @@
         </div>
         <div class="right">
             <div id="nav">
-                <img src="imgs/logo_ta.png" />
+                <img src="imgs/logo_ta.webp" />
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="works.html">WORKS</a>
