--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!doctype html>
+
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -33,7 +33,7 @@
         </div>
         <div class="right">
             <div id="nav">
-                <img src="imgs/logo_ta.webp" />
+                <img src="imgs/logo_ta.png" />
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="works.html">WORKS</a>
