--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -16,22 +15,22 @@
     <meta name="format-detection" content="telephone=no,address=no">
     <meta name="google" content="notranslate">
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@TeamTast" />
-    
+    <meta name="twitter:site" content="@TeamTast" />    
+
     <meta property="og:url" content="https://tast.jp" />
-    <meta property="og:title" content="TeamTast | チームタスト" /> 
+    <meta property="og:title" content="Tast | タスト" /> 
     <meta property="og:description" content="身内で結成されたチームです。" /> 
     <meta property="og:image" content="https://tast.jp/imgs/logo_ta.webp" />
 </head>
 <body>
     <div class="flexer">
         <div class="left">
-            <img src="imgs/logo.webp" alt="Tast Logo" />
+            <img src="imgs/logo.webp" alt="tast logo" />
             <p id="copyright">© 2022 Tast</p>
         </div>
         <div class="right">
             <div id="nav">
-                <img src="imgs/logo_ta.webp" alt="Tast Logo" />
+                <img src="imgs/logo_ta.webp" alt="tast logo 2"/>
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="works.html">WORKS</a>
