--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         </div>
         <div class="right">
             <div id="nav">
-                <img src="imgs/logo_ta.webp" />
+                <img class="mobile" src="imgs/logo.webp" alt="tast logo" />
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="works.html">WORKS</a>
