--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         </div>
         <div class="right">
             <div id="nav">
-                <img src="imgs/logo_ta.png" />
+                <img class="mobile" src="imgs/logo.webp" alt="tast logo" />
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="works.html">WORKS</a>
