--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="right">
             <div id="nav">
-                <img src="imgs/logo_ta.webp" alt="tast logo 2"/>
+                <img class="mobile" src="imgs/logo.webp" alt="tast logo" />
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="works.html">WORKS</a>
